# twitter-metric-frontend

./: .env  .env.example  middleware.ts  next.config.js  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/auth/callback/: route.ts
app/api/twitter/interactions/: route.ts
app/auth/callback/: page.tsx
app/auth/dashboard/: page.tsx
app/auth/dashboard/components/: DashboardHeader.tsx  EngagementOverview.tsx  InteractionHistory.tsx
app/auth/error/: page.tsx
app/auth/signin/: SignInForm.tsx  page.tsx
app/components/: EngagementStats.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  SecretNetworkConnect.tsx  Testimonials.tsx
app/dashboard/: page.tsx
app/dashboard/components/: DashboardHeader.tsx  EngagementOverview.tsx  LeaderboardSection.tsx  PointsBreakdown.tsx  TwitterInteractionsProvider.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/ui/: progress.tsx
contract/: Cargo.toml  README.md
contract/src/: lib.rs  msg.rs  state.rs
hooks/: useAuth.ts  useEngagementPoints.ts  useLeaderboard.ts  useTwitterInteractions.ts
lib/: auth.ts  supabase.ts
providers/: SecretNetworkProvider.tsx
supabase/migrations/: 20250125091608_violet_valley.sql
types/: next-auth.d.ts  supabase.ts
